test/Programs/InvalidTests/mainNotValue/mainNotValue.fst
start : Int -> Bool
start x = True
